--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,14 @@
   </head>
   <body>
     <form class="search-form" id="search-form">
-      <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
-      <button type="submit">Search</button>
+      <input
+        id="search-input"
+        type="text"
+        name="searchQuery"
+        autocomplete="off"
+        placeholder="Search images..."
+      />
+      <button id="search-button" type="submit">Search</button>
     </form>
     <div class="gallery">
       <!-- Картки зображень -->
