--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
     <div class="gallery">
       <!-- Картки зображень -->
     </div>
+    <button type="button" class="load-more">Load more</button>
     <script src="./js/index.js"></script>
   </body>
 </html>
