--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,9 @@
     <div class="gallery">
       <!-- Картки зображень -->
     </div>
-    <button type="button" class="load-more">Load more</button>
+    <div class="load-button-conteiner">
+      <button type="button" class="load-more">Load more</button>
+    </div>
     <script src="./js/index.js"></script>
   </body>
 </html>
